Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -632,6 +632,7 @@
                         <span class="tag">HTML</span>
                         <span class="tag">CSS</span>
                         <span class="tag">JavaScript</span>
+                        <span class="tag">Firebase</span>
                     </div>
                 </div>
             </div>
@@ -837,3 +838,4 @@
 </body>
 
 </html>
+
